fix: reduce quartz debug output

--- a/DuckSoup/log4net.config
+++ b/DuckSoup/log4net.config
@@ -1,4 +1,7 @@
 ﻿<log4net>
+    <logger name="Quartz">
+        <level value="ERROR" />
+    </logger>
     <root>
         <level value="ALL" />
         <appender-ref ref="console" />
