--- a/DuckSoup/DuckSoup.csproj
+++ b/DuckSoup/DuckSoup.csproj
@@ -15,7 +15,11 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="FastEndpoints" Version="5.3.2.1-beta" />
+        <PackageReference Include="FastEndpoints.Security" Version="5.3.2.1-beta" />
+        <PackageReference Include="FastEndpoints.Swagger" Version="5.3.2.1-beta" />
         <PackageReference Include="McMaster.NETCore.Plugins" Version="1.4.0" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Log4Net.AspNetCore" Version="6.1.0" />
         <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
         <PackageReference Include="Quartz" Version="3.3.2" />
         <PackageReference Include="Quartz.Jobs" Version="3.3.2" />
