--- a/DuckSoup/DuckSoup.csproj
+++ b/DuckSoup/DuckSoup.csproj
@@ -6,6 +6,7 @@
         <RootNamespace>DuckSoup</RootNamespace>
         <ProductVersion>2.0.0</ProductVersion>
         <LangVersion>11</LangVersion>
+        <Version>1.1.0</Version>
     </PropertyGroup>
 
     <ItemGroup>
