--- a/PacketLibrary/PacketLibrary.csproj
+++ b/PacketLibrary/PacketLibrary.csproj
@@ -10,12 +10,12 @@
     <ItemGroup>
         <Folder Include="Enums\Download" />
         <Folder Include="Global" />
-        <Folder Include="Objects\Agent" />
         <Folder Include="Objects\Download" />
         <Folder Include="Objects\Global" />
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\API\API.csproj" />
         <ProjectReference Include="..\SilkroadSecurityAPI\SilkroadSecurityAPI.csproj" />
     </ItemGroup>
 
