--- a/API/API.csproj
+++ b/API/API.csproj
@@ -15,14 +15,14 @@
         <PackageIcon>DuckSoup.png</PackageIcon>
         <RepositoryUrl>https://github.com/b0ykoe/ducksoup</RepositoryUrl>
         <LangVersion>11</LangVersion>
-        <Version>1.2.1</Version>
+        <Version>1.3.0</Version>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="EntityFramework" Version="6.4.4" />
-        <PackageReference Include="log4net" Version="2.0.14" />
-        <PackageReference Include="McMaster.NETCore.Plugins" Version="1.4.0" />
+        <PackageReference Include="log4net" Version="2.0.15" />
+        <PackageReference Include="McMaster.NETCore.Plugins" Version="2.0.0-beta.130" />
         <PackageReference Include="Watson" Version="4.3.5" />
     </ItemGroup>
 
