--- a/DuckSoup/DuckSoup.csproj
+++ b/DuckSoup/DuckSoup.csproj
@@ -6,7 +6,7 @@
         <RootNamespace>DuckSoup</RootNamespace>
         <ProductVersion>2.0.0</ProductVersion>
         <LangVersion>11</LangVersion>
-        <Version>1.1.3</Version>
+        <Version>1.2.0</Version>
     </PropertyGroup>
 
     <ItemGroup>
@@ -16,11 +16,11 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="McMaster.NETCore.Plugins" Version="1.4.0" />
-        <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-        <PackageReference Include="Quartz" Version="3.3.2" />
-        <PackageReference Include="Quartz.Jobs" Version="3.3.2" />
-        <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
+        <PackageReference Include="McMaster.NETCore.Plugins" Version="2.0.0-beta.130" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+        <PackageReference Include="Quartz" Version="3.5.0" />
+        <PackageReference Include="Quartz.Jobs" Version="3.5.0" />
+        <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
         <PackageReference Include="Watson" Version="4.3.5" />
     </ItemGroup>
 
