--- a/SilkroadSecurityAPI/SilkroadSecurityAPI.csproj
+++ b/SilkroadSecurityAPI/SilkroadSecurityAPI.csproj
@@ -1,12 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
-        <LangVersion>11</LangVersion>
+        <TargetFramework>net8.0</TargetFramework>
+        <LangVersion>latestmajor</LangVersion>
         <Version>2.0.0</Version>
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="LanguageExt.Core" Version="4.4.7" />
         <PackageReference Include="NetCoreServer" Version="7.0.0"/>
     </ItemGroup>
 
