--- a/DuckSoup/DuckSoup.csproj
+++ b/DuckSoup/DuckSoup.csproj
@@ -2,10 +2,10 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net7.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <RootNamespace>DuckSoup</RootNamespace>
         <ProductVersion>2.0.0</ProductVersion>
-        <LangVersion>11</LangVersion>
+        <LangVersion>latestmajor</LangVersion>
         <Version>2.0.0-ALPHA</Version>
     </PropertyGroup>
 
@@ -16,16 +16,16 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="JWT" Version="10.0.3"/>
-        <PackageReference Include="LanguageExt.Core" Version="4.4.6"/>
+        <PackageReference Include="JWT" Version="10.1.1" />
+        <PackageReference Include="LanguageExt.Core" Version="4.4.7" />
         <PackageReference Include="McMaster.NETCore.Plugins" Version="2.0.0-beta.130"/>
         <PackageReference Include="NetCoreServer" Version="7.0.0"/>
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
-        <PackageReference Include="Quartz" Version="3.6.3"/>
-        <PackageReference Include="Quartz.Jobs" Version="3.6.3"/>
-        <PackageReference Include="Serilog" Version="3.1.0-dev-02071"/>
-        <PackageReference Include="Serilog.Sinks.Console" Version="4.2.0-dev-00918"/>
-        <PackageReference Include="Watson" Version="5.1.1"/>
+        <PackageReference Include="Quartz" Version="3.7.0" />
+        <PackageReference Include="Quartz.Jobs" Version="3.7.0" />
+        <PackageReference Include="Serilog" Version="3.1.0-dev-02083" />
+        <PackageReference Include="Serilog.Sinks.Console" Version="5.0.0-dev-00923" />
+        <PackageReference Include="Watson" Version="5.1.3" />
     </ItemGroup>
 
     <ItemGroup>
