--- a/PacketLibrary/PacketLibrary.csproj
+++ b/PacketLibrary/PacketLibrary.csproj
@@ -5,6 +5,16 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <LangVersion>11</LangVersion>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <PackageId>DuckSoup.PacketLibrary</PackageId>
+        <Title>DuckSoup PacketLibrary</Title>
+        <Authors>b0ykoe</Authors>
+        <Description>DuckSoup PacketLibrary</Description>
+        <Copyright>DON'T BE A DICK PUBLIC LICENSE </Copyright>
+        <PackageProjectUrl>https://github.com/b0ykoe/ducksoup</PackageProjectUrl>
+        <PackageLicenseUrl>https://github.com/b0ykoe/ducksoup/blob/main/LICENSE.txt</PackageLicenseUrl>
+        <PackageIcon>DuckSoup.png</PackageIcon>
+        <RepositoryUrl>https://github.com/b0ykoe/ducksoup</RepositoryUrl>
     </PropertyGroup>
 
     <ItemGroup>
@@ -17,6 +27,13 @@
     <ItemGroup>
         <ProjectReference Include="..\API\API.csproj" />
         <ProjectReference Include="..\SilkroadSecurityAPI\SilkroadSecurityAPI.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="DuckSoup.png">
+        <Pack>True</Pack>
+        <PackagePath></PackagePath>
+      </None>
     </ItemGroup>
 
 </Project>
