--- a/PacketLibrary/PacketLibrary.csproj
+++ b/PacketLibrary/PacketLibrary.csproj
@@ -14,6 +14,7 @@
         <PackageProjectUrl>https://github.com/b0ykoe/ducksoup</PackageProjectUrl>
         <PackageLicenseUrl>https://github.com/b0ykoe/ducksoup/blob/main/LICENSE.txt</PackageLicenseUrl>
         <RepositoryUrl>https://github.com/b0ykoe/ducksoup</RepositoryUrl>
+        <Version>2.0.0-ALPHA</Version>
     </PropertyGroup>
 
     <ItemGroup>
