--- a/Database/Database.csproj
+++ b/Database/Database.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <Version>2.0.0-ALPHA</Version>
     </PropertyGroup>
 
     <ItemGroup>
