--- a/SilkroadSecurityAPI/SilkroadSecurityAPI.csproj
+++ b/SilkroadSecurityAPI/SilkroadSecurityAPI.csproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
         <LangVersion>11</LangVersion>
+        <Version>2.0.0</Version>
     </PropertyGroup>
 
     <ItemGroup>
