--- a/Database/Database.csproj
+++ b/Database/Database.csproj
@@ -18,6 +18,8 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="Serilog" Version="3.1.0-dev-02071" />
+      <PackageReference Include="Serilog.Sinks.Console" Version="4.2.0-dev-00918" />
     </ItemGroup>
 
 </Project>
