--- a/DuckSoup/DuckSoup.csproj
+++ b/DuckSoup/DuckSoup.csproj
@@ -17,11 +17,14 @@
 
     <ItemGroup>
         <PackageReference Include="JWT" Version="10.0.3" />
+        <PackageReference Include="LanguageExt.Core" Version="4.4.6" />
         <PackageReference Include="McMaster.NETCore.Plugins" Version="2.0.0-beta.130" />
         <PackageReference Include="NetCoreServer" Version="7.0.0" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="Quartz" Version="3.6.3" />
         <PackageReference Include="Quartz.Jobs" Version="3.6.3" />
+        <PackageReference Include="Serilog" Version="3.1.0-dev-02071" />
+        <PackageReference Include="Serilog.Sinks.Console" Version="4.2.0-dev-00918" />
         <PackageReference Include="Watson" Version="5.1.1" />
     </ItemGroup>
 
