--- a/PacketLibrary/PacketLibrary.csproj
+++ b/PacketLibrary/PacketLibrary.csproj
@@ -48,4 +48,10 @@
       <Folder Include="VSRO188\Download\Objects\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="LanguageExt.Core" Version="4.4.6" />
+      <PackageReference Include="Serilog" Version="3.1.0-dev-02071" />
+      <PackageReference Include="Serilog.Sinks.Console" Version="4.2.0-dev-00918" />
+    </ItemGroup>
+
 </Project>
