--- a/PacketLibrary/PacketLibrary.csproj
+++ b/PacketLibrary/PacketLibrary.csproj
@@ -4,7 +4,7 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <LangVersion>latestmajor</LangVersion>
+        <LangVersion>12</LangVersion>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <PackageId>DuckSoup.PacketLibrary</PackageId>
         <Title>DuckSoup PacketLibrary</Title>
