--- a/SilkroadSecurityAPI/SilkroadSecurityAPI.csproj
+++ b/SilkroadSecurityAPI/SilkroadSecurityAPI.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
-        <LangVersion>latestmajor</LangVersion>
+        <LangVersion>12</LangVersion>
         <Version>2.0.0</Version>
     </PropertyGroup>
 
