--- a/SilkroadSecurityAPI/SilkroadSecurityAPI.csproj
+++ b/SilkroadSecurityAPI/SilkroadSecurityAPI.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
         <PackageReference Include="LanguageExt.Core" Version="4.4.7" />
         <PackageReference Include="NetCoreServer" Version="7.0.0"/>
+        <PackageReference Include="Serilog" Version="3.1.0-dev-02083" />
     </ItemGroup>
 
 </Project>
