--- a/SilkroadSecurityAPI/SilkroadSecurityAPI.csproj
+++ b/SilkroadSecurityAPI/SilkroadSecurityAPI.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net8.0</TargetFramework>
         <LangVersion>12</LangVersion>
         <Version>2.0.0</Version>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
