--- a/DuckSoup/DuckSoup.csproj
+++ b/DuckSoup/DuckSoup.csproj
@@ -6,7 +6,7 @@
         <RootNamespace>DuckSoup</RootNamespace>
         <ProductVersion>2.0.0</ProductVersion>
         <LangVersion>12</LangVersion>
-        <Version>2.0.2-ALPHA</Version>
+        <Version>2.0.3-ALPHA</Version>
         <Nullable>enable</Nullable>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     </PropertyGroup>
@@ -19,15 +19,16 @@
 
     <ItemGroup>
         <PackageReference Include="JWT" Version="10.1.1"/>
-        <PackageReference Include="LanguageExt.Core" Version="4.4.7"/>
+        <PackageReference Include="LanguageExt.Core" Version="4.4.8" />
         <PackageReference Include="McMaster.NETCore.Plugins" Version="2.0.0-beta.130"/>
-        <PackageReference Include="NetCoreServer" Version="7.0.0"/>
+        <PackageReference Include="NetCoreServer" Version="8.0.7" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
-        <PackageReference Include="Quartz" Version="3.7.0"/>
-        <PackageReference Include="Quartz.Jobs" Version="3.7.0"/>
-        <PackageReference Include="Serilog" Version="3.1.0-dev-02083"/>
-        <PackageReference Include="Serilog.Sinks.Console" Version="5.0.0-dev-00923"/>
-        <PackageReference Include="Watson" Version="6.0.2" />
+        <PackageReference Include="Quartz" Version="3.8.1" />
+        <PackageReference Include="Quartz.Jobs" Version="3.8.1" />
+        <PackageReference Include="Serilog" Version="4.0.0-dev-02122" />
+        <PackageReference Include="Serilog.Sinks.Console" Version="5.1.0-dev-00943" />
+        <PackageReference Include="Serilog.Sinks.File" Version="5.0.1-dev-00972" />
+        <PackageReference Include="Watson" Version="6.1.6" />
     </ItemGroup>
 
     <ItemGroup>
